libqalculate (3.2.0-1) experimental; urgency=medium

  * New upstream release
    - refresh patches
    - refresh copyright years
  * Bump soname to 21
    - rename lib and data packages
    - libqalculate21: add Breaks and Replaces on libqalculate20
    - libqalculate21-data: add Breaks and Replaces on older -data packages
  * Add autopkgtest

 -- Vincent Legout <vlegout@debian.org>  Thu, 11 Jul 2019 07:11:42 +0200

libqalculate (2.8.2-1) unstable; urgency=medium

  * New upstream release
  * Fix debian/watch, use github example from uscan(1)
  * Standards-Version 4.3.0
  * Add gitlab-ci.yml

 -- Vincent Legout <vlegout@debian.org>  Sun, 06 Jan 2019 08:21:01 +0100

libqalculate (2.8.0-2) unstable; urgency=medium

  * Upload to unstable

 -- Vincent Legout <vlegout@debian.org>  Sat, 24 Nov 2018 12:39:15 +0100

libqalculate (2.8.0-1) experimental; urgency=medium

  * New upstream version
  * Bump soname to 20
    - rename lib and data packages
    - libqalculate20: add Breaks and Replaces on libqalculate14
    - libqalculate20-data: add Breaks and Replaces on older -data packages
      (Closes: #894112)
  * Add Build-Depends on doxygen and build documentation with it
    - thanks to James Lu <james@overdrivenetworks.com>
  * Add 2018 in debian/copyright
  * Standards-Version 4.2.1
  * Add Vcs fields to salsa

 -- Vincent Legout <vlegout@debian.org>  Wed, 31 Oct 2018 06:05:01 +0100

libqalculate (2.2.1-2) experimental; urgency=medium

  * libqalculate-dev: add Depends on libmpfr-dev (Closes: #894300)
  * qalc: remove Recommends on libgnomevfs2-common (Closes: #893920)

 -- Vincent Legout <vlegout@debian.org>  Thu, 29 Mar 2018 07:04:40 +0200

libqalculate (2.2.1-1) experimental; urgency=medium

  * New upstream version (Closes: #829996)
    - remove no longer needed patches
    - add fix_autogen.patch to fix build
    - update copyright
  * Rename lib package to libqalculate14 and data package to libqalculate14-data
  * debian/rules:
    - build with hardening=+all